2008-02-29  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/resources/Makefile.am (SUBDIRS): Added 'htdocs' to list
	* configure.ac (AC_CONFIG_FILES): Added to list:
	  src/main/resources/htdocs/Makefile

2008-02-28  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/resources/htdocs/error.roc: new file (originally from
	  the bedrock 1.6.4 tarball)

	Autoconfiscation:
	* AUTHORS: new file
	* BUGS: new file
	* COPYING: new file
	* HACKING: new file
	* INSTALL: new file
	* README: new file
	* bootstrap: new file
	* configure.ac: new file
	* Makefile.am: new file
	* autotools/ads_PERL_MODULE.m4: new file
	* autotools/missing: new file
	* autotools/install-sh: new file
	* autotools/ads_PERL_LIBDIR.m4: new file
	* autotools/ads_PERL_INCLUDES.m4: new file
	* autotools/ads_PROG_PERL.m4: new file
	* bin/Makefile.am: new file
	* bin/splice-in-file: new file
	* src/Makefile.am: new file
	* src/main/Makefile.am: new file
	* src/main/perl/Makefile.am: new file
	* src/main/perl/cgi-bin/Makefile.am: new file
	* src/main/perl/cgi-bin/bedrock.cgi.in: new file (replaces
	  bedrock.cgi, which we now generate at build time)
	* src/main/perl/lib/Makefile.am: new file
	* src/main/resources/Makefile.am: new file
	* src/main/resources/bedrock-perl5-inc-begin-block.snippet.in: new file

	* src/main/perl/cgi-bin/bedrock.cgi: Added file (based on CVS
	  revision 1.3 of the file that formerly existed as
	  src/main/perl/lib/Bedrock/Apache/bedrock.cgi
	- later removed file and replaced it with bedrock.cgi.in

	* NEWS: Added blurb for upcoming 1.6.6 release

	* BLM/Mail.pm: patched to work with Apache 2.x
	* BLM/Startup/UserSession.pm: likewise
	* Bedrock/Context.pm: likewise
	* Bedrock/Apache/Bedrock.pm: likewise
	* Bedrock/Apache/Request_cgi.pm: likewise
	* Bedrock/SIS/Array.pm: likewise
	* Bedrock/SIS/Hash.pm: likewise
	* Bedrock/Text/TagX/Scalar.pm: likewise
	* Bedrock/Text/TagX/TAG/WithBody/Sink.pm: likewise
