@@ -1,0 +1,5 @@
+## Process this file with automake to produce Makefile.in -*-Makefile-*-
+
+htdocsdir = $(datadir)/htdocs
+
+htdocs_DATA = error.roc
