@@ -1,5 +1,6 @@
 2008-02-29  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
+	* src/main/resources/htdocs/Makefile.am: new file
 	* src/main/resources/Makefile.am (SUBDIRS): Added 'htdocs' to list
 	* configure.ac (AC_CONFIG_FILES): Added to list:
 	  src/main/resources/htdocs/Makefile
